crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__record__tests__error_rest_named.snap
---
source: crates/alder-parse/src/pattern/record.rs
description: "{ ..r }"
---
Record(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 1,
            },
            boundary: Position {
                line: 1,
                column: 5,
            },
            unexpected: Position {
                line: 1,
                column: 5,
            },
        },
    ),
    1,
    1,
)
