crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__record__tests__error_rest_not_last.snap
---
source: crates/alder-parse/src/pattern/record.rs
description: "{ .., x }"
---
Record(
    RestNotLast(
        1,
        7,
    ),
    1,
    1,
)
