crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__record__tests__error_trailing_comma.snap
---
source: crates/alder-parse/src/pattern/record.rs
description: "Code:\n\n{ x, y, }"
---
Record(
    Field(
        1,
        9,
    ),
    1,
    1,
)
