crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__record__tests__error_unclosed.snap
---
source: crates/alder-parse/src/pattern/record.rs
description: "{ x, y"
---
Record(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 1,
            },
            boundary: Position {
                line: 1,
                column: 7,
            },
            unexpected: Position {
                line: 1,
                column: 7,
            },
        },
    ),
    1,
    1,
)
