crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__record__tests__multiline.snap
---
source: crates/alder-parse/src/pattern/record.rs
description: "Code:\n\n{\n    x,\n    y,\n    z\n}"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 5,
            column: 2,
        },
    },
    value: Record(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 2,
                        column: 6,
                    },
                },
                value: "x",
            },
            Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 6,
                    },
                },
                value: "y",
            },
            Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 5,
                    },
                    end: Position {
                        line: 4,
                        column: 6,
                    },
                },
                value: "z",
            },
        ],
    ),
}
