crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__record__tests__renamed_field.snap
---
source: crates/alder-parse/src/pattern/record.rs
description: "{ x: a }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 9,
        },
    },
    value: Record {
        fields: [
            FieldPattern {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 3,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                    value: "x",
                },
                pattern: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 6,
                            },
                            end: Position {
                                line: 1,
                                column: 7,
                            },
                        },
                        value: Var(
                            "a",
                        ),
                    },
                ),
            },
        ],
        rest: None,
    },
}
