crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__record__tests__rest_trailing_comma.snap
---
source: crates/alder-parse/src/pattern/record.rs
description: "{ x, .., }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 11,
        },
    },
    value: Record {
        fields: [
            FieldPattern {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 3,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                    value: "x",
                },
                pattern: None,
            },
        ],
        rest: Some(
            Region {
                start: Position {
                    line: 1,
                    column: 6,
                },
                end: Position {
                    line: 1,
                    column: 8,
                },
            },
        ),
    },
}
